# frogtable

./: .gitignore  Cargo.toml  default.nix  flake.nix
bindings/: DbBroadcastEvent.ts  Direction.ts  ExecQueryRequest.ts  ExecQueryResponse.ts  ListQueriesResponse.ts  Ordering.ts  Query.ts  QueryConfig.ts  QuerySource.ts  RpcRequest.ts  RpcResponse.ts
src/: api.rs  cli_config.rs  config.rs  db.rs  json.rs  main.rs
src-web/: .gitignore  bun.lockb  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
src-web/src/: App.tsx  ContextMenu.tsx  DataCell.tsx  DataTable.tsx  DraggableTableHeader.tsx  ErrorTable.tsx  Paginator.tsx  QueryList.tsx  TimeDistance.tsx  bindings  main.tsx  rpc.ts  worker.ts
