[package]
name = "frogtable"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
clap = { version = "4.5.18", features = ["derive", "env", "wrap_help"] }
dirs = "5.0.1"
duckdb = { version = "1.1.1", features = ["bundled", "serde_json"] }
arrow = { version = "53", features = ["json"] }
arrow-schema = { version = "53", features = ["serde"] }
fallible-iterator = "0.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlparser = "0.51.0"
tokio = { version = "1.40.0", features = ["full"] }
ts-rs = { version = "10.0.0", features = ["serde-json-impl"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["sync"] }
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
axum-embed = "0.1.0"
open = "5.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
