[package]
name = "frogtable"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.4"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
dirs = "6"
duckdb = { version = "1.3.2", features = ["bundled", "serde_json"] }
arrow = { version = "55", features = ["json"] }
arrow-schema = { version = "55", features = ["serde"] }
fallible-iterator = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.58.0"
tokio = { version = "1", features = ["full"] }
ts-rs = { version = "11", features = ["serde-json-impl"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["sync"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
axum-embed = "0.1.0"
open = "5"
chrono = { version = "0.4.38", features = ["serde"] }
notify = { version = "8", features = ["macos_kqueue"] }
